updated contact page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/IMG_5057.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/IMG_5057.jpeg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -982,29 +982,29 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Aditi" data-position="top" data-tooltip="Call Aditi"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Aditi">+14808034691</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Aditi" href="mailto:ajoshi64@asu.edu" target="_blank" data-position="top"
+            data-tooltip="Email Aditi" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Aditi" href="mailto:ajoshi64@asu.edu"
+              class="hoverline">ajoshi64@asu.edu</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Aditi on GitHub" href="http://github.com/aadiiitiii" target="_blank"
+            data-position="top" data-tooltip="View Aditi on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Aditi on Github" href="http://github.com/aadiiitiii" class="hoverline"
+              target="_blank">github.com/aadiiitiii</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Aditi on LinkedIn" href="http://linkedin.com/in/aadiiitiii" target="_blank"
+            data-position="top" data-tooltip="View Aditi on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Aditi on LinkedIn" href="http://linkedin.com/in/aadiiitiii"
+              class="hoverline" target="_blank">linkedin.com/in/aadiiitiii</a></a>
         </p>
       </div>
     </section>
