--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Aditi Joshi | Software Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -43,7 +43,7 @@
   <meta property="og:image" content="https://aadiiitiii.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@aadiiitiii" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/aadiiitiii" />
@@ -158,8 +158,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Aditi
+        Joshi</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -931,8 +931,8 @@ of each drug container to estimate the degradation of the drug.
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
+                    <li>Data Mining</li>
+                    <li>Mobile Computing</li>
                     <li>Foundations of Algorithms</li>                    
                   </ul>
                   </p>
@@ -947,14 +947,13 @@ of each drug container to estimate the degradation of the drug.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">Pune Institute of Computer Technology, Savitribai Phule Pune University</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Pune, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Engineering in Computer Engineering
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>8.4/10
                 </p>
 
                 <ul>
@@ -965,7 +964,15 @@ of each drug container to estimate the degradation of the drug.
                     <li>Database Management Systems</li>
                     <li>Operating Systems</li>
                     <li>Machine Learning</li>
-                    <li>Computer Vision</li>
+                    <li>Design and Analysis of Algorithms</li>
+                    <li>Advanced Data Structures</li>
+                    <li>Object-Oriented Programming</li>
+                    <li>Software Engineering & Project Management</li>
+                    <li>Data Mining and Warehousing</li>
+                    <li>Data Analytics</li>
+                    <li>Artificial Intelligence and Robotics</li>
+                    <li>Soft Computng and Optimization Algorithms</li>
+                    <li>Operations Research</li>
                   </ul>
                   </p>
 
