--- a/index.html
+++ b/index.html
@@ -310,35 +310,33 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="https://www.publicissapient.com/" target="_blank"><img alt="Sapient logo"
+                    src="/assets/img/sapient logo.svg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                  <span class="card-title"><a href="https://www.publicissapient.com/" target="_blank"
+                      class="teal-text hoverline">Publicis Sapient</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Data Engineer</div>
             <ul>
+              <li>Worked on McDonald’s Japan Analytics project as a Data Engineer.</li>
+              <li>Devised five Machine Learning models to generate insights into the data and predict the customer's order preferences.</li>
+              <li>Created data ingestion pipelines to download over 25+ data files from Azure bucket, decompress the files and ingest the data in Google Cloud Platform's BigQuery. </li>
+              <li>Formulated data validation pipeline to validate the ingested data with files. </li>
+              <li>Integrated Appfollow API to get the reveiews, ratings and downloads of McDonald's Japan's mobile applications.</li>
+              <li>Incorporated Data Build Tool (DBT) and DBT docs pipeline where the transformation of data was handled. </li>
+              <li>Created CI/CD pipeline to keep the code in sync between code repository and the container folders.</li>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
-              </li>
-              <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
-              </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
-              <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Python, AppFollow, DBT, Apache Airflow, Kubernetes, GCP tools- BigQuery, DataFlow, Cloud Storage, AI platform.
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>Jan 2020 - July 2021 | Bangalore, India</span>
           </div>
         </div>
 
@@ -924,7 +922,7 @@ of each drug container to estimate the degradation of the drug.
                 <p>
                   <b>Degree: </b>Master of Science in Computer Science      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>NA
                 </p>
 
                 <ul>
