--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
+                  <span class="card-title"><a href="http://publicissapient.com" target="_blank"
                       class="teal-text hoverline">Publicis Sapient</a></span>
                 </p>
               </div>
@@ -367,7 +367,63 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>Nov 2019 - Dec 2019 | Bangalore, India</span>
+            <span>Oct 2019 - Dec 2019 | Bangalore, India</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.publicissapient.com" target="_blank"><img alt="Sapient logo"
+                    src="/assets/img/sapient logo.svg" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="http://publicissapient.com" target="_blank"
+                      class="teal-text hoverline">Publicis Sapient</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">ASDE Trainee</div>
+            <ul>
+              <li>Worked in a 5-member team on to develop a shopping website using RESTful APIs</li>
+              <li>Acted as a scrum master for a group of 5 members, conducted daily scrum meetings</li>
+              <li>Developed Login page, Register page for the website along with their validation</li>
+              <li>Created Jenkins pipeline for version controlling and to deploy the code.</li>
+              <li>
+                <b>Tools:</b> HTML, CSS, Spring Boot, DataBases, Jenkins, Kafka, Redis
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>June 2019 - Oct 2019 | Bangalore, India</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://openebs.io/" target="_blank"><img alt="Sapient logo"
+                    src="/assets/img/openebs logo.png" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://openebs.io/" target="_blank"
+                      class="teal-text hoverline">OpenEBS Project</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Student Intern</div>
+            <ul>
+              <li>Worked on cloud based deployment technologies like docker and Kubernetes for creation and handling of clusters along with their visualisation.</li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>Feb 2018 - May 2018 | Pune, India</span>
           </div>
         </div>
 
