--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
@@ -449,8 +449,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -474,9 +472,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
@@ -489,8 +487,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -511,7 +507,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- 1. Django Project -->
           <!-- <div class="col s12 m6 l6">
@@ -551,7 +547,7 @@
           </div> -->
 
           <!-- Flask Project -->
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
@@ -565,8 +561,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -588,10 +582,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- VQA -->
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
@@ -604,8 +598,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -625,10 +617,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Video Summarizer -->
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
@@ -641,8 +633,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -653,7 +643,6 @@
                     BLEU, METEOR evaluation metrics.</li>
 
                 </ul>
-                <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
                     target="_blank" data-position="top" data-tooltip="View Source"
@@ -662,10 +651,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Image Generator -->
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
@@ -678,8 +667,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -697,10 +684,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Head Counting System -->
-          <div class="col s12 m6 l4">
+<!--           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
@@ -713,8 +700,6 @@
                 </p>
               </div>
               <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -732,7 +717,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- ************* -->
         </div>
