--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
         </div>
 
         <!-- certifications -->
-        <!-- <div class="card">
+        <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Certificates</h4>
             <div class="row text-left">
@@ -857,7 +857,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </section>
@@ -901,7 +901,7 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">Pune Institute of Computer Technology, Savitribai Phule Pune University</a></span>
+                  <span class="card-title"><a href="https://pict.edu/" target="_blank" class="teal-text hoverline">Pune Institute of Computer Technology, Savitribai Phule Pune University</a></span>
                 </p>
                 <p class="brown-text">Pune, India</p>
                 <p>
