--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <div class="container">
         <div class="row">
 
-<!--           <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
@@ -445,22 +445,18 @@
                 <span class="card-title activator teal-text hoverline">Music Player Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A music streaming web app based on Django
+                  Drive Thru Crew Automation
                 </p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Search and filter songs based on language and singer.</li>
-                  <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                  <li>Scroll through recently played/viewed songs.</li>
-
+                  <li><b>Tools:</b> NodeJS, ReactJS and MongoDB</li>
+                  <li>Created the user flow for a customer when he enters the drive-thru, displaying his personalized menu based on previous orders through POS machines.</li>
 
                 </ul>
-                <div class="card-action">
+                <<!-- div class="card-action">
                   <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
@@ -469,10 +465,10 @@
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
-          </div> -->
+          </div>
 
 <!--           <div class="col s12 m6 l4">
             <div class="card medium">
