--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
                 <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Music Player Web-App<i
+                <span class="card-title activator teal-text hoverline">Drive Thru Crew Automation<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Drive Thru Crew Automation
+                  Burgerhack 
                 </p>
               </div>
               <div class="card-reveal">
@@ -874,7 +874,7 @@
                 <p>
                   <b>Degree: </b>Master of Science in Computer Science      
                   <br>
-                  <b>CGPA: </b>NA
+                  <b>CGPA: </b>Pursuing
                 </p>
 
                 <ul>
