--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h4>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h4>
-              <h5>A graduate from Pune Institute of Computer Technology with a Bachelor's degree in Computer Engineering. I'm currently a MAsters student at Arizona State University</h5>
-              <h5>Having started coding at an early age and also having completed my Bachelor’s, I can say my interest in this field has only grown with time. I gravitate more towards Data Analysis, Data Engineering and Software Development domains. Working in the technology sector of Publicis Sapient has helped me gain relevant experience in the industry. As businesses today are becoming more inextricably linked with information technology, I strive to utilize my expertise to bridge the gap between technology and business.</h5>
-              <h5>My key interest lies solely in sharing my technical expertise with people. I thoroughly enjoy tackling problems pertaining to technology and coming up with novel ideas.</h5>
+              <p>A graduate from Pune Institute of Computer Technology with a Bachelor's degree in Computer Engineering. I'm currently a MAsters student at Arizona State University</p>
+              <p>Having started coding at an early age and also having completed my Bachelor’s, I can say my interest in this field has only grown with time. I gravitate more towards Data Analysis, Data Engineering and Software Development domains. Working in the technology sector of Publicis Sapient has helped me gain relevant experience in the industry. As businesses today are becoming more inextricably linked with information technology, I strive to utilize my expertise to bridge the gap between technology and business.</p>
+              <p>My key interest lies solely in sharing my technical expertise with people. I thoroughly enjoy tackling problems pertaining to technology and coming up with novel ideas.</p>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/aadiiitiii" target="_blank">
