added old projects

--- a/index.html
+++ b/index.html
@@ -499,14 +499,13 @@
             </div>
           </div>
 
-          <!-- 1. Django Project -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="django web app" src="/assets/img/project-library-logo.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Web Application for Textile Industry<i class="mdi-navigation-more-vert right"></i></span>
+                <span class="card-title activator teal-text hoverline">WebApp for Textile Industry<i class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   Smart India Hackathon Project
                 </p>
@@ -531,7 +530,6 @@
             </div>
           </div>
 
-          <!-- Flask Project -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -550,8 +548,7 @@
                 <ul>
                   <li><b>Tools:</b> Python, Datasets, Machine Learning</li>
                   <li>Presented 5 Machine Learning models to predict the occurrence of heart diseases in a patient.</li>
-                  <li>The main objective of this project is to build a model that can predict the heart disease occurrence, based on a combination of features (risk factors) describing the disease. Different machine learning classification techniques were implemented and compared upon standard performance metric such as accuracy.</li>
-
+                  <li>The main objective of this project is to build a model that can predict the heart disease occurrence, based on a combination of features (risk factors) describing the disease.</li>
 
                 </ul>
                 <div class="card-action">
@@ -563,6 +560,83 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Meeting Room Booking System<i class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  DBMS project
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title teal-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> PHP, HTML, CSS, JavaScript, XML</li>
+                  <li>Meeting Room Booking System is a WebApp. It contains list of various rooms from different locations which can be used for booking. The web site contains of various pages and options for booking.</li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Smart Car Parking System<i class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  IOT project
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title teal-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> Python, Arduino Uno</li>
+                  <li>Smart Car Parking System: an IoT based project. The parking space is displayed whether it available or not by using sensors and display it on the Administrator’s PC connected via Cloud.</li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Airport Management System<i class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  IOT project
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title teal-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> Java, JDBC, MySQL</li>
+                  <li>Airport Management System: which stores the database of the flights, passengers, feature of booking a ticket and display the registered users information.</li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
